--- a/FBXLoader/FBXLoader.vcxproj
+++ b/FBXLoader/FBXLoader.vcxproj
@@ -133,6 +133,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FBXModel.h" />
+    <ClInclude Include="ModelData.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
